--- a/lab-01.Rmd
+++ b/lab-01.Rmd
@@ -168,11 +168,12 @@ visitors %>%
 _Perform the same calculation for the 2021 admissions data._
 
 ```{r Ex_h}
-#visitors %>% 
-#  ______(
-#    __________,
-#    __________
-#  )
+visitors %>%
+  summarise (
+    mean_2021 = mean(n_2021, na.rm=TRUE),
+    med_2021 = median(n_2021, na.rm=TRUE)
+  )
+
 ```
 
 All values in the output are `NA`!
@@ -245,8 +246,8 @@ _How many tourist attractions are there in each of the 4 nations? From this, dis
 
 
 ```{r Ex_l}
-#________ %>%
-#  ______(_______)
+visitors_with_nations %>%
+ count(nation)
 ```
 
 
@@ -259,8 +260,12 @@ _Within each of the 4 nations, what is the proportion of tourist attractions tha
 
 ```{r Ex_m}
 # Write your code here
-
-
+visitors_with_nations %>%
+  group_by(nation) %>%
+  count(admission) %>%
+  mutate(pct = 100 * n/sum(n)) %>%
+  filter(admission == "Free") %>%
+  arrange(desc(pct))
 ```
 
 
@@ -270,7 +275,10 @@ _Calculate the percentage change in visitor admissions from 2021 to 2022. Of the
 
 ```{r Ex_n}
 # Write your code here
-
-
-
+visitors_with_nations %>%
+  mutate(pct_change = (n_2022-n_2021)/n_2021) %>%
+  filter(nation == "Scotland") %>%
+  group_by(admission) %>%
+  summarise(mean_pct_change = mean(pct_change, na.rm = TRUE)) %>%
+  arrange(mean_pct_change)
 ```
